--- a/deploy/kubernetes/app.yaml
+++ b/deploy/kubernetes/app.yaml
@@ -1,17 +1,16 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: fake-app
+  name: workload-app
 spec:
-  replicas: 3
+  replicas: 1
   template:
     metadata:
       labels:
-        app: "fake-app-pods"
-        purpose: "service-test"
+        app: "workload-app-pods"
     spec:
       containers:
       - name: "web-app"
-        image: beekman9527/workload:latest
+        image: chung123abc/webapp:v1.0
         ports: 
         - containerPort: 8080
